--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
 Django==5.1.3
 django-ckeditor==6.7.1
 django-js-asset==2.2.0
 django-render-partial==0.4
 django-widget-tweaks==1.5.0
+idna==3.10
+jalali_core==1.0.0
+jdatetime==5.0.0
 pillow==11.0.0
 PyMySQL==1.1.1
+pytz==2024.2
+requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
