--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
-django-ckeditor==6.7.1
+django-ckeditor-5==0.2.15
 django-js-asset==2.2.0
 django-render-partial==0.4
 django-widget-tweaks==1.5.0
